feat: tailwindcss and postcss support

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wavs",
   "private": true,
   "workspaces": [
-    "microservices/*",
+    "services/*",
     "apps/*"
   ],
   "scripts": {
