--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "build": "next build",
-    "start": "next start -p 3010",
-    "start:dev": "next dev -p 3010",
+    "start": "next start",
+    "start:dev": "next dev",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.6"
+    "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.3"
   }
 }
